get things to work!
